# rust-demos

./: Cargo.toml  README.md
thrift/: Cargo.toml
thrift/examples/: client.rs  server.rs
thrift/idl/: tutorial.thrift
thrift/src/: lib.rs  shared.rs  tutorial.rs
thrift_tutorial/idl/: shared.thrift
thrift_tutorial_client/: Cargo.toml
thrift_tutorial_server/: Cargo.toml
tokio/: Cargo.toml
