[package]
name = "tokio-demo"
version = "0.1.0"
authors = ["stepover <simonxiao@qq.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.17"
futures = "0.1.20"
bytes = "0.4"
num_cpus = { version = "1.8.0", optional = true }
tokio-codec = "0.1.0"
tokio-current-thread = { version = "0.1.3"}
tokio-fs = { version = "0.1.6" }
tokio-executor = { version = "0.1.5"}
tokio-reactor = { version = "0.1.1"}
tokio-timer = { version = "0.2.8"}
tokio-io = "0.1.6"
tokio-sync = { version = "0.1.3" }
tokio-threadpool = { version = "0.1.8" }
tokio-tcp = { version = "0.1.0" }
tokio-udp = { version = "0.1.0" }


[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
flate2 = { version = "1", features = ["tokio"] }
futures-cpupool = "0.1"
http = "0.1"
httparse = "1.0"
libc = "0.2"
num_cpus = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"